提携先 文言修正

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
               <p
                 class="greeting-text-content fadeInContents animation-order-03"
               >
-                この度は、当事務所webサイトに訪問いただき誠にありがとうございます。<br />
-                当事務所は2019年開業、2020年補助金申請100件突破、2021年法人化しており、補助金の第一人者として、事業再構築補助金をはじめ様々な補助金申請業務に携わってまいりました。企業売買でも精通しているため、M&A・事業継承の分野でもお役に立てる場面があるかと思います。是非一度ご相談ください。
-                <br />
+              この度は、当事務所webサイトに訪問いただき誠にありがとうございます。
+              当事務所は2019年開業、2021年法人化しており、補助金申請の第一人者として事業再構築補助金をはじめ様々な補助金申請業務に携わってまいりました。企業売買も精通しているため、M&A・事業継承の分野でもお役に立てる場面があるかと思います。是非一度ご相談ください。
+              <br />
                 <br /><br />
-                当事務所はご相談いただいたら必ずお役に立つことをモットーに、会社設立から各資金調達、事業の発展に関する書類手続きなどをワンストップサポートを行っております。許認可・補助金・融資すべての業務に携わっておりますので丁寧・スピードには定評があります。訪れたら必要なものが出てくるような士業のデパートのような事務所を目指しております。
+                当事務所はご相談いただいたら必ずお役に立つことをモットーに、会社設立から各資金調達、事業の発展に関する書類手続きなどをワンストップでサポートしております。許認可・補助金・融資すべての業務に携わっておりますので丁寧・スピードには定評があります。訪れたら必要なものが出てくるような士業のデパートのような事務所を目指しております。
               </p>
             </div>
             <div class="greeting-img">
@@ -108,7 +108,8 @@
                   </span>
                 </h3>
                 <p class="works-contents-text-content">
-                  当事務所では、現在「小規模事業者持続化補助金」「ものづくり補助金」「IT導入補助金」「事業再構築補助金」の申請代行を行っております。必要な書類の選定や事業計画書の作成をお手伝いさせていただくため、再提出や不備が起こることがありません。<br />補助金の採択率も80％以上を誇っておりますので、是非一度ご相談ください。
+                  当事務所では、現在「小規模事業者持続化補助金」「ものづくり補助金」「IT導入補助金」「事業再構築補助金」の申請代行を行っております。単なる補助金申請のみならず採択率向上や事業の売上アップなど総合的な観点よりコンサルティングを行っており、補助金の採択率も80％以上を誇っておりますので、是非一度ご相談ください。
+                  また、代表の佐々木がシステム開発会社も保有しておりますので「補助金を使ったシステム開発」などの案件もご対応可能です。                  
                 </p>
               </div>
               <div class="works-contents-img hojokinn-img"></div>
@@ -124,9 +125,8 @@
                   </span>
                 </h3>
                 <p class="works-contents-text-content">
-                  許認可申請書の種類は非常に多く、建設業許可をはじめとして、許認可の種類は1万を超えます。
-                  許認可申請は「迅速さ」が要求されることが多い業務です。
-                  行政書士法人LILACでは「迅速」「丁寧」を心がけ、後から訂正や補足が出てくることがないよう書類作成を行って参ります。
+                  許認可申請書の種類は非常に多く、建設業許可をはじめとして、許認可の種類は1万種類を超えます。 必要な許可がわからない、この事業に許可は必要か等などもお気軽にお問い合わせください。
+                  許認可の中には、会社を設立する際定款に特定の文言を入れる必要があったり、資本金の額を調整する必要があります。そういった際の方法なども精通しておりますので是非お気軽にお声がけください。                  
                 </p>
               </div>
               <div class="works-contents-img kyoka-img"></div>
@@ -142,8 +142,7 @@
                   </span>
                 </h3>
                 <p class="works-contents-text-content">
-                  ビザ申請と一口に言ってもその外国人によって依頼内容は様々です。留学ビザ、特定技能ビザ、就労ビザ等種類は様々で、外国人の現在の状況に応じて認定申請・変更申請・更新申請を行います。ビザ申請は外国人にとって非常に重要であり、今後の生活や人生にも大きな影響を与えます。行政書士法人LILACでは入管のホームページでは載っていない情報もあるため、ビザにお困りな方は是非一度ご相談ください。
-                </p>
+                  ビザ申請と一口に言ってもその外国人によって依頼内容は様々です。留学ビザ、特定技能ビザ、就労ビザ等種類は様々で、外国人の現在の状況に応じて認定申請・変更申請・更新申請を行います。ビザ申請は外国人にとって非常に重要であり、今後の生活や人生にも大きな影響を与えます。ビザにお困りな方は是非一度ご相談ください。                </p>
               </div>
               <div class="works-contents-img viza-img"></div>
             </div>
@@ -158,7 +157,7 @@
                   </span>
                 </h3>
                 <p class="works-contents-text-content">
-                  行政書士法人LILACでは中小企業M&A・事業承継を行っております。M&A・事業承継では税務問題等も発生いたしますが、税理士をはじめとした外部の専門家と提携しておりますので、M&Aにかかるすべての業務を行うことが可能です。是非一度ご相談ください。
+                  行政書士法人LILACでは中小企業M&A・事業承継も取り扱っております。M&A・事業承継ではヂューデリジェンスや税務問題等も発生いたしますが、税理士をはじめとした外部の専門家と提携しておりますので、M&Aにかかるすべての業務を行うことが可能です。また、代表の佐々木が複数の事業会社を持っておりスモールM&Aに精通しておりますので、会社の売買案件などもありましたら是非一度ご相談ください。
                 </p>
               </div>
               <div class="works-contents-img ma-img"></div>
@@ -181,10 +180,14 @@
                 <p class="team-contents-text-name">佐々木 真理子</p>
                 <p class="team-contents-text-sub-name">MARIKO SASAKI</p>
                 <p class="team-contents-text-position">
-                  行政書士 / 宅建建物取引士 / 補助金バンク登録専門家
+                  行政書士 / 宅建建物取引士/貸金業務取扱主任者資格保有 
                 </p>
                 <p class="team-contents-text-content">
-                  補助金申請を主軸としている行政書士。100件以上の補助金支援実績があり、補助金に係る許認可申請や各種給付金などにも幅広く精通している。事業再構築補助金ではいち早く情報をキャッチアップし、事業者と密にコミュニケーションを取ることでスムーズな申請をサポート。<br />2021年　小規模事業者持続化補助金（低感染リスク型ビジネス枠）全件採択。
+                  300件以上の補助金申請支援実績があり、補助金に係る許認可申請や各種給付金などにも幅広く精通している。事業再構築補助金ではいち早く情報をキャッチアップし、事業者と密にコミュニケーションを取ることでスムーズな申請をサポート。
+事業再構築補助金、ものづくり補助金においては採択率80％以上の実績を誇っており、補助金獲得総額は3億円を超える。
+趣味は会社のショッピングで、スモールM＆Aにも精通している。
+また、自身も事業会社を数社保有している中で保有する不動産会社では未公開物件を数多く扱っており、会社売買からシステム開発、不動産売買などあらゆる相談に対応が可能となっている。
+
                 </p>
               </div>
             </div>
