--- a/team.html
+++ b/team.html
@@ -59,7 +59,10 @@
                   行政書士 / 宅建建物取引士 /<br class="sp_display"> 補助金バンク登録専門家
                 </p>
                 <p class="team-contents-text-content">
-                  補助金申請を主軸としている行政書士。100件以上の補助金支援実績があり、補助金に係る許認可申請や各種給付金などにも幅広く精通している。事業再構築補助金ではいち早く情報をキャッチアップし、事業者と密にコミュニケーションを取ることでスムーズな申請をサポート。<br />2021年　小規模事業者持続化補助金（低感染リスク型ビジネス枠）全件採択。
+                  300件以上の補助金申請支援実績があり、補助金に係る許認可申請や各種給付金などにも幅広く精通している。事業再構築補助金ではいち早く情報をキャッチアップし、事業者と密にコミュニケーションを取ることでスムーズな申請をサポート。
+                  事業再構築補助金、ものづくり補助金においては採択率80％以上の実績を誇っており、補助金獲得総額は3億円を超える。
+                  趣味は会社のショッピングで、スモールM＆Aにも精通している。
+                  また、自身も事業会社を数社保有している中で保有する不動産会社では未公開物件を数多く扱っており、会社売買からシステム開発、不動産売買などあらゆる相談に対応が可能となっている。
                 </p>
               </div>
             </div>
@@ -147,6 +150,312 @@
                 <p class="external-advisor-contents-text-content">
                   慶應義塾大学商学部卒。在学中の2005年、当時最年少公認会計士2次試験合格。検査法人トーマツで監査・会計コンサルティング業務に10年勤務。その後ベンチャーCEO、上場企業の財務経理部長を担当しながらモノづくり補助金申請支援に携わり、事業再構築補助金では19社中15社採択といった78％以上の採択率を出しており、最大6000万円の補助金申請を行った。
                   <br />2021年　小規模事業者持続化補助金（低感染リスク型ビジネス枠）全件採択。
+                </p>
+              </div>
+            </div>
+            <!-- -------------------------------------------------
+            2022/12/23日追加分
+            大山　文夫さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-04">
+              <div class="external-advisor-contents-img">
+                <img src="./image/oyama.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">大山　文夫</p>
+                <p class="external-advisor-contents-text-sub-name">
+                  OYAMA HUMIO
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  公認会計士<br>
+                  大山公認会計士事務所　代表<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  立教大学４年時よりPWに勤務。６年半の監査経験を経て税理士法人Y&Pに参画。法人・個人の税務コンサルティング、上場支援・上場監査（中古車買い取り大手やY&Pグループ会社など複数社の上場に関与）及びM&Aコンサルティングに従事。財務・会計だけでなく、税務及びその他の法務対応など、創業ベンチャーから、IPOを目指す成長期、IPO後のバリューアップ、次世代への引継ぎ、M&Aなど、オーナー企業の総合相談役として対応している。
+                </p>
+              </div>
+            </div>
+                        <!-- -------------------------------------------------
+            2022/12/23日追加分
+           石下 貴大さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-05">
+              <div class="external-advisor-contents-img">
+                <img src="./image/siozu2.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">石下 貴大</p>
+                <p class="external-advisor-contents-text-sub-name">
+                 IWASITA TAKAO
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  行政書士<br>
+                  行政書士法人GOAL 代表社員<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  平成26年10月、行政書士法人GOALを設立。
+                  環境系行政書士としての業務に留まらず、会社設立や一般社団設立支援、それに伴うコンサルティングにも定評がある。
+                  行政書士向け実務講習の場である「行政書士の学校」の校長を務めるほか、補助金助成金の検索＆マッチングサイト「みんなの助成金」の運営や電子契約書事業に取り組むなど幅広く活動している。
+                  開業以来10年間、1日も欠かさず続けているブログは、アメブロ読者数・士業部門においてNO.1を誇る。
+                  ブログがきっかけで多数の著書を出版し、メディア出演多数。
+                  インターネット・マーケティングにおけるセミナーも人気が高い。
+                </p>
+              </div>
+            </div>
+          <!-- -------------------------------------------------
+            2022/12/23日追加分
+           塩津 大輔さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-06">
+              <div class="external-advisor-contents-img">
+                <img src="./image/siozu3.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">塩津 大輔</p>
+                <p class="external-advisor-contents-text-sub-name">
+                 SIOZU DAISUKE
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  行政書士<br>
+                  塩津総合法務事務所 代表<br>
+                  超士業塾　主催<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  大阪府立北野高等学校卒業
+                  大阪市立大学経済学部卒業
+                  現在は行政書士事務所をコンサルタント会社を経営。
+                  行政書士事務所は独立開業して12年目、コンサル事業は9年目。
+                  現在では行政書士事務所としては300社以上の企業に関与させて頂きコンサルタントとしては士業事務所、企業合わせて100社以上のコンサルティング行う。                  
+                </p>
+              </div>
+            </div>
+                      <!-- -------------------------------------------------
+            2022/12/23日追加分
+           橋場 和弥さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-06">
+              <div class="external-advisor-contents-img">
+                <img src="./image/siozu3.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">塩津 大輔</p>
+                <p class="external-advisor-contents-text-sub-name">
+                 SIOZU DAISUKE
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  行政書士<br>
+                  塩津総合法務事務所 代表<br>
+                  超士業塾　主催<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  大阪府立北野高等学校卒業
+                  大阪市立大学経済学部卒業
+                  現在は行政書士事務所をコンサルタント会社を経営。
+                  行政書士事務所は独立開業して12年目、コンサル事業は9年目。
+                  現在では行政書士事務所としては300社以上の企業に関与させて頂きコンサルタントとしては士業事務所、企業合わせて100社以上のコンサルティング行う。                  
+                </p>
+              </div>
+            </div>
+                                  <!-- -------------------------------------------------
+            2022/12/23日追加分
+           橋場 和弥さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-07">
+              <div class="external-advisor-contents-img">
+                <img src="./image/Hashimoto.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">橋場 和弥</p>
+                <p class="external-advisor-contents-text-sub-name">
+                 HASHIMOTO KAZUYA
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  税理士<br>
+                  ＡＲＫ税理士事務所　代表<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  飲食業、建築業、通信業など多種多様な業界を経験し→税理士業界へ。
+                  税理士資格は3年で取得することができ、
+                  目的に対しての”業務効率化”や”問題解決力”には自信があります。
+                  税理士業界は１５年目となり、
+                  異業種での経験や業界経験を元に『枠にとらわれない税理士』としてサポートを実施。
+                  税理士は先生業ではなく”サービス業”として、
+                  お客様のご要望に沿った『オーダーメイドサポート』をご提供致します。                                   
+                </p>
+              </div>
+            </div>
+            <!-- -------------------------------------------------
+            2022/12/23日追加分
+           内田 裕樹さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-07">
+              <div class="external-advisor-contents-img">
+                <img src="./image/Utida.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">内田 裕樹</p>
+                <p class="external-advisor-contents-text-sub-name">
+                  HIROKI UCHIDA
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  司法書士、不動産鑑定士、行政書士、FP、測量士補、宅建士等々<br>
+                  BRAIN TRUST司法書士・行政書士事務所 代表<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  相続特化型司法書士法人にて、司法書士として900件以上の相続手続業務・遺言書作成・家族信託・セミナー等に携わる。その後、不動産鑑定士の資格を活かすべく、大手不動産鑑定会社に転職し、様々な不動産鑑定業務に従事した後、独立開業。独立開業後は、士業のみならず様々な事業に注力。モットーは『士業は究極のサービス業』。大手士業事務所の経験をもとに、お客様のニーズに合わせたサービスを提供中。
+                  https://uchida-legal.com/                                                
+                </p>
+              </div>
+            </div>
+             <!-- -------------------------------------------------
+            2022/12/23日追加分
+           伊藤海さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-07">
+              <div class="external-advisor-contents-img">
+                <img src="./image/Itou.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">伊藤 海</p>
+                <p class="external-advisor-contents-text-sub-name">
+                  ITO KAI
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  弁護士／弁理士<br>
+                  伊藤海法律事務所　代表<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  2012年に司法試験合格。都内事務所に勤務の後2018年に独立し、現在は伊藤海法律事務所の所長を務める。
+                  IT・エンタメ系の企業顧問を中心に手掛ける。他方で、俳優・声優・タレントなどの個人側の代理人も多く務めており、両岸からの視点を持ったうえで事案解決へ導く。社外監査役やスタートアップ企業への事業参画なども多数。
+
+                </p>
+              </div>
+            </div>
+                         <!-- -------------------------------------------------
+            2022/12/23日追加分
+           白須 靖浩さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-07">
+              <div class="external-advisor-contents-img">
+                <img src="./image/NoImage.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">白須 靖浩</p>
+                <p class="external-advisor-contents-text-sub-name">
+                  ITO KAI
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  税理士<br>
+                  白須税理士事務所<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  昭和51年生まれ
+                  税理士事務所にて約20年の経験、民間企業でも約5年の経験があり、
+                  個人事業主から年商100億円規模の法人まで様々な税務に携わってきました。
+                  自身でも様々な事業を展開していた経歴もあり、
+                  顧問先の社長様に寄り添ったサービスをモットーに日々税務会計業務を行っております。
+                  白洲税理士事務所について
+                  令和3年11月
+                  港区赤坂にて創業
+                  お客様に寄り添って親しみやすい税理士
+                  お客様の経営課題には決してあきらめない姿勢
+                  お客様のCFOのスタンス
+                  にて税理士事務所運営を行っております。
+                  創業後、すぐに顧問先50件を突破しました。
+                  現在も毎月お客様からの新規のご依頼をいただいております。
+                  千代田区神田には白須創業相談センターを設立し、多くの創業支援を行っております。
+                  
+                </p>
+              </div>
+            </div>
+                                     <!-- -------------------------------------------------
+            2022/12/23日追加分
+           尾島 穣さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-07">
+              <div class="external-advisor-contents-img">
+                <img src="./image/NoImage.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">尾島 穣</p>
+                <p class="external-advisor-contents-text-sub-name">
+                  ITO KAI
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  税理士<br>
+                  株式会社未来サポート　代表取締役<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  ２０代の頃から、建設業、コールセンター、営業代行会社などの事業を行う。
+                  平成２６年　税理士法人青色会計に勤務
+                  決算業務、法人顧問業務、資金調達業務を行う
+                  税理士事務所の営業活動としては、５年間紹介のみで１億円の顧問契約を獲得。
+                  （税理士事務所の営業成績としては日本トップクラス）
+                  令和２年８月　サムライ会計事務所設立に携わる
+                  同時に自身が代表の資金調達会社㈱サムライコンサルティンググループ設立
+                  １年半で５０人規模の事務所になる
+                  令和３年１１月　税理士事務所を退職し、㈱サムライコンサルティンググループの事業に専念
+                  令和４年１月　㈱サムライコンサルティンググループを㈱未来サポートに商号変更
+                  現在、開業サポートをメインに補助金支援、税理士紹介、不動産紹介、HP作成、広告代理業務等、開業や中小企業の売上UP支援を専門に事業を行っている。
+                  
+                </p>
+              </div>
+            </div>
+
+            <!-- -------------------------------------------------
+            2022/12/23日追加分
+           板井川　浩さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-07">
+              <div class="external-advisor-contents-img">
+                <img src="./image/Itaigawa.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">板井川　浩</p>
+                <p class="external-advisor-contents-text-sub-name">
+                  ITAIGAWA HIROSHI
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  中小企業診断士<br>
+                  icompanies（ｱｲｶﾝﾊﾟﾆｰｽﾞ)　代表　<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  ２０代の頃から、建設業、コールセンター、営業代行会社などの事業を行う。
+                  平成２６年　税理士法人青色会計に勤務
+                  決算業務、法人顧問業務、資金調達業務を行う
+                  税理士事務所の営業活動としては、５年間紹介のみで１億円の顧問契約を獲得。
+                  （税理士事務所の営業成績としては日本トップクラス）
+                  令和２年８月　サムライ会計事務所設立に携わる
+                  同時に自身が代表の資金調達会社㈱サムライコンサルティンググループ設立
+                  １年半で５０人規模の事務所になる
+                  令和３年１１月　税理士事務所を退職し、㈱サムライコンサルティンググループの事業に専念
+                  令和４年１月　㈱サムライコンサルティンググループを㈱未来サポートに商号変更
+                  現在、開業サポートをメインに補助金支援、税理士紹介、不動産紹介、HP作成、広告代理業務等、開業や中小企業の売上UP支援を専門に事業を行っている。
+                </p>
+              </div>
+            </div>
+            <!-- -------------------------------------------------
+            2022/12/23日追加分
+           阿部 賢悟さん
+            ------------------------------------------------- -->
+            <div class="external-advisor-contents fadeUpContents animation-order-07">
+              <div class="external-advisor-contents-img">
+                <img src="./image/Abe.png" alt=""/>
+              </div>
+              <div class="external-advisor-contents-text-contents">
+                <p class="external-advisor-contents-text-name">阿部 賢悟</p>
+                <p class="external-advisor-contents-text-sub-name">
+                  ABE KENGO
+                </p>
+                <p class="external-advisor-contents-text-position">
+                  Distance Corporation 代表取締役　<br>
+                </p>
+                <p class="external-advisor-contents-text-content">
+                  1998年1月からIT業界へ入り、ソフトバンクグループではGeoCities Japanを担当。合併によりYahoo! JAPANに入社。
+                  その後他社に移り、韓国との共同事業、オフショア開発では中国、インドとの協業を経験し、2007年からベトナムとの仕事をスタート。
+                  開発の業務を行いながらITコンサルティングとしてマンションデベロッパ、通信事業者、自動車メーカー等の日本国内の大手企業と協業させていただき、数多くのサイトをたちあげてきました。
+                  2011年にベトナムに移住し、100名以上の従業員数のベトナム系IT企業2社の顧問を経て、自社に社員を揃える形をスタートしました。
+                  現在はシステム開発だけでなく、メディア事業、ベトナム進出支援、教育、飲食などを事業として行い、カンボジア、ミャンマーにも進出しています。                  
                 </p>
               </div>
             </div>
